<resources>
    <string name="app_name">num3</string>

    <string name="login">登陆</string>
    <string name="ribao">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="vtex">V2EX</string>
    <string name="setting">设置</string>
    <string name="like">喜欢</string>
    <string name="about">关于</string>
    <string name="zixun">咨询</string>
    <string name="xuanxiang">选项</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
